# opengrammar

./: .gitignore  .pr_agent.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRAMMAR_RULES.md  LICENSE  NOTICE  README.md  ROADMAP.md  example-response.json  index.html  test-grammar.html
desktop/: Cargo.toml  README.md
desktop/ograms-engine/: Cargo.toml  README.md
desktop/ograms-engine/examples/: llm_smoke.rs
desktop/ograms-engine/scripts/: parity-check.mjs
desktop/ograms-engine/src/: cli.rs  context.rs  conviction.rs  harper_engine.rs  learned.rs  lib.rs  llm.rs  main.rs  ollama.rs  protected.rs  symspell.rs
desktop/ograms-hotkey/: Cargo.toml  README.md  build.rs
desktop/ograms-hotkey/src/: autocorrect.rs  config.rs  dictionary.rs  diff.rs  engine_data.rs  main.rs  overlay.rs  pill.rs  settings.rs  suggestion.rs  tray.rs  windows_app.rs
docs/: 00-index.md  01-quick-start.md  04-browser-extension-setup.md  05-backend-deployment.md  06-docker-self-hosting.md  07-ai-providers.md  09-using-opengrammar.md  10-tone-rewriting.md  11-writing-statistics.md  12-keyboard-shortcuts.md  13-architecture.md  14-development.md  15-api-reference.md  18-troubleshooting.md  19-faq.md  21-contributing.md  22-og-rewrite-ai-handoff.md  23-suggestion-testing-run.md  24-og-rewrite-false-positive-audit.md  25-local-llm-model-benchmark.md  27-proactive-proofreader-testing.md  29-os-wide-grammar-checking-research.md  30-products-overview.md  31-desktop-app.md  32-extension-consistency-audit.md  33-spell-suggestion-benchmark.md  index.html  styles.css
docs-site/: index.html  script.js  styles.css
opengrammar/: CONTRIBUTING.md  FEATURES_IMPLEMENTATION.md  GRAMMARLY_CLONE.md  GROQ_SETUP.md  IMPROVEMENTS.md  NOTICE  PRODUCTION.md  README.md  SELF_HOSTING.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TEST_GRAMMARLY_STYLE.md  (+5 more)
(+159 files in other folders)
