[package]
name = "ograms-engine"
version = "0.9.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
harper-core = "2.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "2.12", optional = true }

[features]
default = ["net"]
# `net` pulls in the blocking HTTP client (ureq + rustls) for the LLM tier.
# Disable it (`--no-default-features`) to unit-test the pure parsing/offset
# logic in environments without a TLS/C toolchain.
net = ["dep:ureq"]
