[package]
name = "ograms-hotkey"
version = "0.1.0"
edition = "2024"

[dependencies]
ograms-engine = { path = "../ograms-engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(windows)'.build-dependencies]
# Embeds a Win32 manifest so the settings window's controls get the modern
# Win11 visual styles (Common-Controls v6) + Per-Monitor-V2 DPI. Build-time only.
embed-manifest = "1.4.0"

[target.'cfg(windows)'.dependencies]
uiautomation = { version = "0.25.0", features = ["event"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
